Remove some sonar issues